Revisit GraphicsContext:IsSimpleDRRect() heuristics

GraphicsContext::FillDRRect() employs several heuristics in order to
determine whether a DRRect can be drawn as a (simpler) stroked RRect.

A couple of issues:

1) trivial zero-radius corners are rejected because they don't pass
   the "unconstrained" test (outer_radius == inner_radius + stroke_width).
   This means we are unnecessarily using a more expensive drawDRRect for
   borders which happen to have one or more zero-radius corners.

2) anisotropic/non-circular corners diverge from inner/outer contours
   when drawn as a stroked RRect (most noticeable with thick strokes,
   because the [outer-inner] contour is not the same geometry as the
   stroked centered ellipse).

We try to guard against #2 with an arbitrary stroke limit, but that is
fragile (e.g. the newly added test).

To deal with these problems, update the simple-drrect heuristics to

  a) always accept zero-radius corners

  b) reject all anisotropic/non-circular radii

TEST=ietestcenter/css3/bordersbackgrounds/border-top-left-radius-values-005.htm

Bug: 848203,848605
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I088e98b0afc474162417036e6278a5751f65e73d
Reviewed-on: https://chromium-review.googlesource.com/1081309
Reviewed-by: Stephen Chenney <schenney@chromium.org>
Commit-Queue: Florin Malita <fmalita@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563646}
Former-commit-id: e2eef42958b177eaf8cbbdae667c481d0789421c